# ai-governance-tool

./: .cursorrules  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Install AlphaPi.command  README.md  TESTER-GUIDE.md  TESTING.md  TODOS.md  alphapi_confidentiality_slide.py  alphapi_onepager.py  alphapi_sample_assessment.py  index.html  package-lock.json  package.json  session-summary.md  tsconfig.app.json  vite.config.ts
.github/workflows/: release.yml
docs/: CURRENT-SESSION.md  NEXT-SESSION-PROMPT.md  PRO-MITIGATIONS-MAP.md  SESSION-36-RECOVERY.md  SESSION-37-RECOVERY.md  SESSION-38-RECOVERY.md  SESSION-39-RECOVERY.md  SESSION-40-RECOVERY.md  SESSION-41-RECOVERY.md  SESSION-42-RECOVERY.md  SESSION-43-RECOVERY.md  SESSION-55-RECOVERY.md  SESSION-64-RECOVERY.md  SESSION-65-KICKOFF.md  SESSION-65-RECOVERY.md  ai-agent-governance.md  ai-governance-knowledge-base.md  armanino-prep-checklist.md  audit-report.md  code-review.md  decisions.md  exec-summary-knowledge-base.md  governance-synthesis.md  gtm-plan.md  lessons-learned.md  open-questions.md  powerpoint-copilot-prompt.md  project-plan.md  remaining-work-plan.md  remote-content-plan.md  saas-maturity-model.md  saas-product-plan.md  session-log.md  source-documents-summary.md  test-plan.md  tool-diary.md
docs/designs/: regulatory-intelligence-agent.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: ErrorBoundary.tsx  (+1 more)
worker/: package.json  tsconfig.json  wrangler.toml
(+63 files in other folders)
